--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build ./docker-compose-mysql-webapp/webapp/ -t ${{ secrets.DOCKER_USERNAME }}/flask-web-1:${{ github.sha }}
+          docker build ./docker-compose-mysql-webapp/webapp/ -t ${{ secrets.DOCKER_USERNAME }}/flask-web-1:latest
 
       - name: Push Docker Image
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/flask-web-1:${{ github.sha }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/flask-web-1:latest
