--- a/kubernetes-bonus/flask-new-deployment.yml
+++ b/kubernetes-bonus/flask-new-deployment.yml
@@ -21,6 +21,25 @@ spec:
           ports:
             - containerPort: 5000
               name: flask-port
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 5000
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /readiness
+              port: 5000
+            initialDelaySeconds: 3
+            periodSeconds: 5
 
 ---
 
@@ -31,7 +50,7 @@ metadata:
 spec:
   selector:
     app: flask-web 
-  type: LoadBalancer # Or LoadBalancer If the Ingress dont work for you .
+  type: LoadBalancer # Or LoadBalancer if Ingress doesn't work for you
   ports:
     - name: flask-port
       port: 5000
