--- a/kubernetes-bonus/flask-new-deployment.yml
+++ b/kubernetes-bonus/flask-new-deployment.yml
@@ -30,13 +30,13 @@ spec:
               memory: "256Mi"
           livenessProbe:
             httpGet:
-              path: /healthz
+              path: /
               port: 5000
             initialDelaySeconds: 5
             periodSeconds: 10
           readinessProbe:
             httpGet:
-              path: /readiness
+              path: /
               port: 5000
             initialDelaySeconds: 3
             periodSeconds: 5
