--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
+      - main 
   pull_request:
     branches:
-      - main
+      - main 
 
 jobs:
   build-and-push:
@@ -24,8 +24,23 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build ./docker-compose-mysql-webapp/webapp/ -t ${{ secrets.DOCKER_USERNAME }}/flask-web-1:latest
+          docker build . -t ${{ secrets.DOCKER_USERNAME }}/flask-web-1:${{ github.sha }} 
 
       - name: Push Docker Image
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/flask-web-1:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/flask-web-1:${{ github.sha }}
+
+      - name: Update Image
+        run: |
+          cd ./kubernetes-bonus
+          # Update the image tag in your deployment.yaml
+          sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/flask-web-1:${{ github.sha }}|" deployment-falsk_server.yml
+
+          
+      - name: Commit changes
+        run: |
+          git config --global user.email "${{ secrets.EMAIL_GITHUB }}"
+          git config --global user.name "${{ secrets.USERNAME_GITHUB }}"
+          git add ./kubernetes-bonus/deployment-falsk_server.yml
+          git commit -m "update image tag to ${{ github.sha }}"
+          git push 
