--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build . -t ${{ secrets.DOCKER_USERNAME }}/flask-web-1:${{ github.sha }} 
+          docker build ./docker-compose-mysql-webapp/webapp -t ${{ secrets.DOCKER_USERNAME }}/flask-web-1:${{ github.sha }} 
 
       - name: Push Docker Image
         run: |
